--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "marked": "^4.0.0",
     "vue": "^3.0.0",
+    "vue-code-highlight": "^0.7.8",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
